Incresed Maven heap space #3